# cortex

./: .gitignore  README.md
.github/workflows/: node.js.yml
backend/: .gitignore  pyproject.toml
backend/src/tiledspc/serialization/: nexus.py  tsv.py
backend/src/tiledspc/tests/: conftest.py  test_catalog_nexus.py
backend/tests/: conftest.py  test_catalog_nexus.py  test_catalog_tsv.py
ui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
ui/src/: App.css  App.tsx  columns.ts  line_plot.tsx  main.tsx  navbar.tsx  run.test.tsx  run.tsx  run_list.test.tsx  run_list.tsx  run_table.test.tsx  run_table.tsx  tiled_api.test.ts  tiled_api.ts  types.ts
web-frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
web-frontend/src/: App.tsx  beamlines.tsx  columns.ts  debounce.ts  index.css  local_storage.ts  main.tsx  navbar.tsx  ndarray-unpack.d.ts  run.test.tsx  run.tsx  run_list.test.tsx  run_list.tsx  run_table.test.tsx  run_table.tsx  runs_hook.ts  streaming.tsx  tiled_api.test.ts  tiled_api.ts  types.ts
web-frontend/src/beamlines/: header.tsx  latest_run.test.tsx  latest_run.ts  liveplot.test.tsx  liveplot.tsx  panels.test.tsx  panels.tsx  status.tsx  status_25id.tsx  summary.tsx
web-frontend/src/catalog/: axis_labels.test.ts  axis_labels.ts  columns.ts  dataset.test.tsx  dataset.ts  exit_status.tsx  index.ts  live_badge.tsx  prepare_data.test.ts  prepare_data.ts  roi_table.tsx  run.test.tsx  run.tsx  run_detail.tsx  run_list.test.tsx  run_list.tsx  run_plots.test.tsx  run_plots.tsx  run_table.test.tsx  (+8 more)
(+50 files in other folders)
